5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1637_2446.log
== TEST (2019-04-09 10:52:51) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//10 %1000000
x2= senha//100 %100000
print(x1)
print(x2)
-- OUTPUT:
8761
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:14) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1000000 % 10
x2= senha//100 %100000
print(x1)
print(x2)
-- OUTPUT:
0
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:37) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %1000000
x2= senha//10 % 1000000
print(x1)
print(x2)
-- OUTPUT:
87612
8761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:53) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
print(x1)
print(x2)
-- OUTPUT:
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:01) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//100000 % 10
x6= senha // 100000 % 10
print(x1,x2,x3,x4,x5,x6)
-- OUTPUT:
2 1 6 7 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:12) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//100000 % 10
x6= senha // 1000000 % 10
print(x1,x2,x3,x4,x5,x6)
-- OUTPUT:
2 1 6 7 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:23) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
print(x1,x2,x3,x4,x5,x6)
-- OUTPUT:
2 1 6 7 8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:21) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

if ((x2+x4+x6) % (x1+x3+x5) == 0)
	msg= "senha liberada"
else: 
	msg= "senha invalida""
-- ERROR:
File "XXXX", line 9
    if ((x2+x4+x6) % (x1+x3+x5) == 0)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:58) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

lib= ((x2+x4+x6) % (x1+x3+x5))
print(lib)
if ((x2+x4+x6) % (x1+x3+x5) == 0)
	msg= "senha liberada"
else: 
	msg= "senha invalida""
-- ERROR:
File "XXXX", line 11
    if ((x2+x4+x6) % (x1+x3+x5) == 0)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:59:05) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

lib= ((x2+x4+x6) % (x1+x3+x5))
print(lib)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:59:14) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

lib= ((x2+x4+x6) // (x1+x3+x5))
print(lib)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:59:29) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

lib= ((x2+x4+x6)% (x1+x3+x5))
print(lib)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:00) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

lib= ((x2+x4+x6)// (x1+x3+x5))
print(lib)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:04) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

lib= ((x2+x4+x6)// (x1+x3+x5))
print(lib)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:19) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

lib= ((x2+x4+x6)// (x1+x3+x5))
print(lib)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:18) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

= ((x2+x4+x6) % (x1+x3+x5))
print(lib)

-- ERROR:
File "XXXX", line 9
    = ((x2+x4+x6) % (x1+x3+x5))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:23) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

c= ((x2+x4+x6) % (x1+x3+x5))
print(lib)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(lib)
NameError: name 'lib' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:32) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

c= ((x2+x4+x6) % (x1+x3+x5))
print(c)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:39) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

c= ((x2+x4+x6) % (x1+x3+x5))
print(c)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:51) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

print(x1,x2,x3,x4,x5,x6)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:57) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

print(x1,x2,x3,x4,x5,x6)


-- OUTPUT:
2 1 6 7 8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:04) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10

c= (x2+x4+x6)
print(c)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:34) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
print(x2,x4,x6)

-- OUTPUT:
1 7 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:58) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
print(x1,x3,x5)

-- OUTPUT:
2 6 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:05:24) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1,x3,x5) % (x2,x4,x6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c=(x1,x3,x5) % (x2,x4,x6)
TypeError: unsupported operand type(s) for %: 'tuple' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:05:43) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c=(x1,x3,x5) % (x2,x4,x6)
TypeError: unsupported operand type(s) for %: 'tuple' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:05:52) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c=(x1,x3,x5) % (x2,x4,x6)
TypeError: unsupported operand type(s) for %: 'tuple' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:07:01) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
print(x2,x4,x6)

-- OUTPUT:
1 7 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:07:22) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
print(c)

-- OUTPUT:
1 7 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:07:56) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
print(c)
if (c==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
-- EXECUTION TIME:
0.11336
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
0
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
8
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:07:58) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
print(c)
if (c==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
-- OUTPUT:
1 7 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:12) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)

if (c==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:16) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)

if (c==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:08:21) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)

if (c==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- EXECUTION TIME:
0.189233
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso negado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:08:23) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)

if (c==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- EXECUTION TIME:
0.139517
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso negado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:13:15) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- EXECUTION TIME:
0.161724
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso negado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:13:17) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:13:30) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:13:45) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="acesso negado"
print(msg)
-- EXECUTION TIME:
0.238597
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso negado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:14:02) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="senha invalida"
print(msg)
-- EXECUTION TIME:
0.228648
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:24:00) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="senha invalida"
print(msg)
-- EXECUTION TIME:
0.192345
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:25:20) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="senha invalida"
print(msg)
-- EXECUTION TIME:
0.192522
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:30:05) 
-- CODE:
senha= int(input("qual sua senha?"))
x1= senha//1 %10
x2= senha//10 % 10
x3= senha//100 % 10
x4= senha// 1000 % 10
x5= senha//10000 % 10
x6= senha // 100000 % 10
c=(x1+x3+x5) % (x2+x4+x6)
v= (x2+x4+x6) % (x1+x3+x5)

if (c==0)or(v==0):
	msg= "acesso liberado"
else: 
	msg="senha invalida"
print(msg)
-- EXECUTION TIME:
0.168972
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
